creates a json with the items of the menu and updates the styles of the login section

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://citlallidmg.github.io/burger-queen",
+  "homepage": "https://citlallidmg.github.io/burger-queen-react",
   "name": "burger-queen",
   "version": "0.1.0",
   "private": true,
