add functionality to display dinamically the order status

--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "firebase": "^5.5.4",
     "jquery": "^3.3.1",
     "popper.js": "^1.14.4",
+    "prop-types": "^15.6.2",
     "react": "^16.5.2",
     "react-dom": "^16.5.2",
     "react-router-dom": "^4.3.1",
