--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "react": "^16.5.2",
     "react-dom": "^16.5.2",
     "react-router-dom": "^4.3.1",
-    "react-scripts": "2.0.5"
+    "react-scripts": "2.0.5",
+    "sweetalert2": "^7.28.11"
   },
   "scripts": {
     "start": "react-scripts start",
